# hll-dynamic-res-plugin

./: .gitignore  README.md  README_CN.md  build.gradle  dynamic_plugin.gradle  gradle.properties  settings.gradle  资源打包和使用说明.md
dynamic_res_base/: build.gradle
dynamic_res_base/src/main/java/com/lalamove/huolala/dynamicbase/: DynamicConst.java  DynamicResType.java  SoType.java
dynamic_res_core/: README.md  build.gradle
dynamic_res_core/src/androidTest/java/com/lalamove/huolala/dynamicres/: ExampleInstrumentedTest.java
dynamic_res_core/src/main/: AndroidManifest.xml
dynamic_res_core/src/main/java/com/lalamove/huolala/dynamiccore/: DynamicResException.java
dynamic_res_core/src/main/res/values/: ids.xml
dynamic_res_core/src/test/java/com/lalamove/huolala/dynamicres/: ExampleUnitTest.java
dynamic_res_plugin/: build.gradle
dynamic_res_plugin/src/main/java/com/lalamove/huolala/dynamicplugin/: DynamicParam.java  DynamicPlugin.java  PluginConst.java
gradle/wrapper/: gradle-wrapper.properties
sample_app/: build.gradle
sample_app/src/androidTest/java/com/lalamove/huolala/lib_dynamic_plugin/: ExampleInstrumentedTest.java
sample_app/src/main/: AndroidManifest.xml
sample_app/src/main/res/layout/: activity_main.xml
sample_app/src/main/res/values/: strings.xml  themes.xml
sample_app/src/main/res/values-night/: themes.xml
sample_native_lib/: build.gradle
sample_native_lib/src/main/: AndroidManifest.xml
sample_native_lib/src/main/cpp/: CMakeLists.txt  dynamiclib.cpp  nativelib.cpp
(+91 files in other folders)
